--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/core": "^0.7.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@textile/hub": "^1.1.0",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
     "next": "^9.3.2",
